[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/gof/Behavior/State/StateLevel.gd" type="Script" id=5]
[ext_resource path="res://entities/Oxygene/ox bottles.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/gof/Behavior/State/lightmap/lightmap.lmbake" type="BakedLightmapData" id=7]
[ext_resource path="res://levels/gof/Behavior/State/Slides/hint.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/Hint/Hint.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/Item.gd" type="Script" id=15]
[ext_resource path="res://entities/level/PlayerSpawner.gd" type="Script" id=16]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=17]
[ext_resource path="res://levels/gof/Behavior/State/Slides/Slide.tscn" type="PackedScene" id=18]
[ext_resource path="res://levels/gof/Behavior/State/Info.tres" type="Resource" id=19]
[ext_resource path="res://entities/button/ButtonItem.tscn" type="PackedScene" id=20]

[sub_resource type="GDScript" id=9]
script/source = "extends OxBottles

var fullState = getObject(\"FullState\")
var emptyState = getObject(\"EmptyState\")
var state = getObject(\"State\") 



func setState(newState = emptyState):
	state = newState

func fillBottles():
	#use the fillBottles() of the state 
	pass

func emptyBottles():
	#use the emptyBottles() of the state 
	pass

"

[sub_resource type="GDScript" id=11]
script/source = "#EmptyState
extends \"user://temp/State.gd\"

var context = getObject(\"OxBottles\")
var state = getObject(\"FullState\")

func fillBottles():
	#use the context's fill() methode 
	#and change its state to full using setState() method
	pass
	
func emptyBottles():
	#It's already empty you can print a warning message using print() method
	pass
"

[sub_resource type="GDScript" id=12]
script/source = "#FullState
extends \"user://temp/State.gd\"


var context = getObject(\"OxBottles\")
var state= getObject(\"EmptyState\")

func emptyBottles():
	#use the context's empty() methode and change its state to full using setState() method
	pass

func fillBottles():
	#you can print a warning message using print() methode
	pass
"

[sub_resource type="GDScript" id=10]
script/source = "extends WallButton

var oxBottles = getObject(\"OxBottles\")
var state= getObject(\"EmptyState\")

func onButtonPressed():
	oxBottles.setState(state)
	oxBottles.fillBottles()
"

[node name="StateLevel" type="Spatial"]
script = ExtResource( 5 )
level_info = ExtResource( 19 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")
hints = NodePath("Hints")

[node name="PlayerSpawner" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.44998, 1.0422, 16.7583 )
script = ExtResource( 16 )

[node name="Map" parent="." instance=ExtResource( 3 )]
data = {
"cells": PoolIntArray( 1, 0, 536870912, 3, 0, 536870912, 5, 0, 536870912, 7, 0, 536870912, 9, 0, 536870912, 11, 0, 536870917, 13, 0, 537526277, 65531, 0, 536870917, 65533, 0, 537526277, 65535, 0, 536870912, 262145, 0, 538050578, 262147, 0, 538050578, 262149, 0, 538050578, 262151, 0, 538050578, 262153, 0, 538050578, 262155, 0, 538050578, 262157, 0, 538050578, 327675, 0, 538050578, 327677, 0, 538050578, 327679, 0, 538050578, 14, 1, 538312716, 65530, 1, 537919500, 1, 2, 536870912, 3, 2, 536870912, 5, 2, 536870912, 7, 2, 536870912, 9, 2, 536870912, 11, 2, 536870917, 13, 2, 537526277, 65531, 2, 536870917, 65533, 2, 537526277, 65535, 2, 536870912, 262145, 2, 538050578, 262147, 2, 538050578, 262149, 2, 538050578, 262151, 2, 538050578, 262153, 2, 538050578, 262155, 2, 538050578, 262157, 2, 538050578, 327675, 2, 538050578, 327677, 2, 538050578, 327679, 2, 538050578, 1, 4, 538312709, 3, 4, 538312709, 5, 4, 538312709, 7, 4, 538312709, 9, 4, 538312709, 11, 4, 536870918, 13, 4, 537526277, 65531, 4, 536870917, 65533, 4, 538312710, 65535, 4, 538312709, 262145, 4, 538050578, 262147, 4, 538050578, 262149, 4, 538050578, 262151, 4, 538050578, 262153, 4, 538050578, 262155, 4, 538050578, 262157, 4, 538050578, 327675, 4, 538050578, 327677, 4, 538050578, 327679, 4, 538050578, 14, 5, 538312716, 65530, 5, 537919500, 1, 6, 537919493, 3, 6, 537919493, 5, 6, 537919493, 7, 6, 537919493, 9, 6, 537919493, 11, 6, 537919493, 13, 6, 537526274, 65531, 6, 537919490, 65533, 6, 537919493, 65535, 6, 537919493, 262145, 6, 538050578, 262147, 6, 538050578, 262149, 6, 538050578, 262151, 6, 538050578, 262153, 6, 538050578, 262155, 6, 538050578, 262157, 6, 538050578, 327675, 6, 538050578, 327677, 6, 538050578, 327679, 6, 538050578, 0, 7, 537526281, 4, 7, 537526311, 8, 7, 537526281, 12, 7, 537526281, 14, 7, 537526303, 65530, 7, 537526303, 65532, 7, 537526281, 262155, 7, 538050578, 2, 9, 537526303, 4, 9, 536870950, 6, 9, 537526303, 3, 10, 536870914, 5, 10, 538312706, 262147, 10, 538050580, 262149, 10, 538050580, 2, 11, 537919497, 6, 11, 538312713, 5, 12, 537526275, 262147, 12, 538050580, 262149, 12, 538050580, 5, 14, 537526275, 262147, 14, 538050580, 262149, 14, 538050580, 2, 15, 537919497, 6, 15, 538312713, 3, 16, 537919490, 5, 16, 537526274, 262147, 16, 538050580, 262149, 16, 538050580, 2, 17, 537526303, 4, 17, 537526309, 6, 17, 537526303, 2, 65509, 536870943, 4, 65509, 536870949, 6, 65509, 536870943, 3, 65510, 536870914, 5, 65510, 538312706, 262147, 65510, 538050580, 262149, 65510, 538050580, 2, 65511, 537919497, 6, 65511, 538312713, 3, 65512, 536870915, 262147, 65512, 538050580, 262149, 65512, 538050580, 3, 65514, 536870915, 262147, 65514, 538050580, 262149, 65514, 538050580, 2, 65515, 537919497, 6, 65515, 538312713, 3, 65516, 536870915, 262147, 65516, 538050580, 262149, 65516, 538050580, 3, 65518, 536870915, 262147, 65518, 538050580, 262149, 65518, 538050580, 2, 65519, 537919497, 6, 65519, 538312713, 3, 65520, 537919490, 5, 65520, 537526274, 262147, 65520, 538050580, 262149, 65520, 538050580, 2, 65521, 536870943, 4, 65521, 537526307, 6, 65521, 536870943, 262147, 65522, 538050580, 262149, 65522, 538050580, 0, 65523, 536870929, 4, 65523, 536870948, 8, 65523, 536870929, 12, 65523, 536870929, 14, 65523, 537526303, 65530, 65523, 537526302, 65532, 65523, 536870929, 1, 65524, 538312709, 3, 65524, 538312709, 5, 65524, 538312709, 7, 65524, 538312709, 9, 65524, 538312709, 11, 65524, 538312709, 13, 65524, 538312706, 65531, 65524, 536870914, 65532, 65524, 537526312, 65533, 65524, 538312709, 65535, 65524, 538312709, 262145, 65524, 538050578, 262147, 65524, 538050578, 262149, 65524, 538050578, 262151, 65524, 538050578, 262153, 65524, 538050578, 262155, 65524, 538050578, 262157, 65524, 538050578, 327675, 65524, 538050578, 327677, 65524, 538050578, 327679, 65524, 538050578, 14, 65525, 538312716, 65530, 65525, 537919500, 1, 65526, 537919493, 3, 65526, 537919493, 5, 65526, 537919493, 7, 65526, 537919493, 9, 65526, 537919493, 11, 65526, 537919494, 13, 65526, 537526277, 65531, 65526, 536870917, 65533, 65526, 537526278, 65535, 65526, 537919493, 262145, 65526, 538050578, 262147, 65526, 538050578, 262149, 65526, 538050578, 262151, 65526, 538050578, 262153, 65526, 538050578, 262155, 65526, 538050578, 262157, 65526, 538050578, 327675, 65526, 538050578, 327677, 65526, 538050578, 327679, 65526, 538050578, 1, 65528, 536870912, 3, 65528, 536870912, 5, 65528, 536870912, 7, 65528, 536870912, 9, 65528, 536870912, 11, 65528, 536870917, 13, 65528, 537526277, 65531, 65528, 536870917, 65533, 65528, 537526277, 65535, 65528, 536870912, 262145, 65528, 538050578, 262147, 65528, 538050578, 262149, 65528, 538050578, 262151, 65528, 538050578, 262153, 65528, 538050578, 262155, 65528, 538050578, 262157, 65528, 538050578, 327675, 65528, 538050578, 327677, 65528, 538050578, 327679, 65528, 538050578, 14, 65529, 538312716, 65530, 65529, 537919500, 1, 65530, 536870912, 3, 65530, 536870912, 5, 65530, 536870912, 7, 65530, 536870912, 9, 65530, 536870912, 11, 65530, 536870917, 13, 65530, 537526277, 65531, 65530, 536870917, 65533, 65530, 537526277, 65535, 65530, 536870912, 262145, 65530, 538050578, 262147, 65530, 538050578, 262149, 65530, 538050578, 262151, 65530, 538050578, 262153, 65530, 538050578, 262155, 65530, 538050578, 262157, 65530, 538050578, 327675, 65530, 538050578, 327677, 65530, 538050578, 327679, 65530, 538050578, 1, 65532, 536870912, 3, 65532, 538312708, 5, 65532, 538312708, 7, 65532, 536870912, 9, 65532, 536870912, 11, 65532, 536870917, 13, 65532, 537526277, 65531, 65532, 536870917, 65533, 65532, 537526277, 65535, 65532, 536870912, 262145, 65532, 538050578, 262147, 65532, 538050578, 262149, 65532, 538050578, 262151, 65532, 538050578, 262153, 65532, 538050578, 262155, 65532, 538050578, 262157, 65532, 538050578, 327675, 65532, 538050578, 327677, 65532, 538050578, 327679, 65532, 538050578, 14, 65533, 538312716, 65530, 65533, 537919500, 1, 65534, 536870912, 3, 65534, 538312708, 5, 65534, 538312708, 7, 65534, 536870912, 9, 65534, 536870912, 11, 65534, 536870917, 13, 65534, 537526277, 65531, 65534, 536870917, 65533, 65534, 537526277, 65535, 65534, 536870912, 262145, 65534, 538050578, 262147, 65534, 538050578, 262149, 65534, 538050578, 262151, 65534, 538050578, 262153, 65534, 538050578, 262155, 65534, 538050578, 262157, 65534, 538050578, 327675, 65534, 538050578, 327677, 65534, 538050578, 327679, 65534, 538050578 )
}

[node name="Slider" parent="." instance=ExtResource( 17 )]
slide_scenes = [ ExtResource( 18 ) ]

[node name="Hints" parent="." instance=ExtResource( 9 )]
slide_scenes = [ ExtResource( 18 ), ExtResource( 8 ) ]

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.86202, 2.21341, -2.08797 )
extents = Vector3( 27.0362, 3.23699, 27.9815 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 7 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.89658, 2.73046, 0 )
omni_range = 64.794

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88376, 2.31199, 14.2178 )
omni_range = 7.58451

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.33441, 2.13569, -20.0137 )
omni_range = 11.9569

[node name="DoorSingle" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.4959, 0.490727, 18.2557 )

[node name="Door" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.51775, 0.522771, -13.2959 )

[node name="Computer" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.51178, 0.478695, -2.31178 )

[node name="State" type="StaticBody" parent="."]
script = ExtResource( 15 )
display_name = "State"
is_programmable = true
locked = true
built_in = false
starting_script = "class_name State extends Code

func fillBottles():
	print(\"pass\")
	pass
	
func emptyBottles():
	pass
	
"

[node name="ox bottles" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.00079e-08, 0, 0.228954, 0, 0.228954, 0, -0.228954, 0, -1.00079e-08, -4.54293, 1.06558, -1.21063 )
code = SubResource( 9 )
display_name = "OxBottles"
is_programmable = true
is_interactable = true

[node name="Empty" type="StaticBody" parent="."]
script = ExtResource( 15 )
code = SubResource( 11 )
display_name = "EmptyState"
is_programmable = true

[node name="Full" type="StaticBody" parent="."]
script = ExtResource( 15 )
code = SubResource( 12 )
display_name = "FullState"
is_programmable = true

[node name="Button" parent="." instance=ExtResource( 20 )]
transform = Transform( 2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, -4.44294, 0.796263, -0.753363 )
code = SubResource( 10 )
display_name = "Button"
is_programmable = true
connect_pressed = true

[node name="CheckTimer" type="Timer" parent="."]

[node name="DoorSingle2" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.52105, 0.544075, -26.2446 )
display_name = "Door"
is_interactable = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HintTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[connection signal="hidden" from="Slider" to="." method="_on_Slider_hidden"]
[connection signal="interact" from="ox bottles" to="." method="_on_ox_bottles_interact"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
[connection signal="interact" from="DoorSingle2" to="." method="_on_DoorSingle2_interact"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HintTimer" to="." method="_on_HintTimer_timeout"]
